<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/cb_grey"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="120dp"
    android:elevation="3dp"
    card_view:cardCornerRadius="3dp"
    card_view:contentPadding="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">


        <!--
               <TextView
                    android:layout_alignParentRight="true"
                    android:id="@+id/cart"
                    android:visibility="visible"
                    android:layout_gravity="right"
                    android:layout_width="30dp"
                    android:text=":"
                    android:layout_height="30dp" />-->

    <LinearLayout
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="0.7"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_gravity="center"
                android:id="@+id/imageview"
                android:src="@drawable/placeholder_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>




        <LinearLayout

            android:layout_margin="12dp"
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.bfurns.utility.FontAwsome
                    android:text="@string/pateint_name"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="0.9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_weight="0.2"
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:text="Patient Name "
                    android:textAllCaps="true"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />


            </LinearLayout>

            <include layout="@layout/item_devider"/>




            <LinearLayout
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.bfurns.utility.FontAwsome
                    android:text="@string/email_icon"
                    android:textSize="@dimen/text_size"

                    android:textColor="@color/colorPrimary"
                    android:layout_weight="0.9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/mode"
                    android:layout_width="match_parent"
                    android:text="email"
                    android:textStyle="italic"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <include layout="@layout/item_devider"/>



            <LinearLayout
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.bfurns.utility.FontAwsome
                    android:text="@string/contact"
                    android:textSize="@dimen/text_size"

                    android:textColor="@color/colorPrimary"
                    android:layout_weight="0.9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:text="contact"
                    android:textStyle="italic"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content" />


            </LinearLayout>



        </LinearLayout>




    </LinearLayout>
</android.support.v7.widget.CardView>
</LinearLayout>
